--- a/run.ipynb
+++ b/run.ipynb
@@ -442,10 +442,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=0\n",
+    "if x==3 or 0:\n",
+    "    print(x)\n",
+    "elif True:\n",
+    "    print('Hi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey\n"
+     ]
+    }
+   ],
+   "source": [
+    "hi=[]\n",
+    "if not hi:\n",
+    "    print('Hey')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -467,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
